fixed avatar cropping for already-registered users

--- a/app/stylesheets/application.css.sass
+++ b/app/stylesheets/application.css.sass
@@ -117,6 +117,20 @@ body
 
   #information
     +single-box-shadow(#666, 0px, 2px, 7px, -2px)
+    
+  form.crop
+    margin: auto
+    float: none
+    padding: 25px
+    background-color: #ac322f
+    +border-radius(4px)
+    
+    .jcrop-holder
+      margin: auto
+      
+    input[type=image]
+      margin: 20px auto 0
+      display: block
 
 body.application.logged_out
   background-image: none
